--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "email-validator": "^2.0.4",
+    "firebase": "^5.4.2",
     "history": "^4.7.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
