--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "email-validator": "^2.0.4",
     "firebase": "^5.4.2",
     "history": "^4.7.2",
+    "immutable": "^3.8.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
